@@ -5,21 +5,29 @@
   <parent>
     <groupId>org.assertj</groupId>
     <artifactId>assertj-integration-tests</artifactId>
-    <version>3.27.2-SNAPSHOT</version>
+    <version>4.0.0-M2-SNAPSHOT</version>
   </parent>
 
   <artifactId>assertj-core-tests</artifactId>
 
-  <name>AssertJ Core Tests</name>
+  <name>AssertJ Core Integration Tests</name>
 
   <properties>
     <argLine>
-      -Dfile.encoding=${project.build.sourceEncoding}
-      -Dnet.bytebuddy.experimental=true
-      --add-opens=java.base/java.lang=ALL-UNNAMED
-      --add-opens=java.base/java.math=ALL-UNNAMED
-      --add-opens=java.base/java.util=ALL-UNNAMED
-      --add-opens=java.base/sun.nio.fs=ALL-UNNAMED
+      <!-- https://github.com/mockito/mockito/issues/3037 -->
+      -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
+      <!-- java.base -->
+      --add-opens java.base/java.lang=org.assertj.core
+      --add-opens java.base/java.math=ALL-UNNAMED
+      --add-opens java.base/java.util=ALL-UNNAMED
+      --add-opens java.base/sun.nio.fs=ALL-UNNAMED
+      <!-- com.fasterxml.jackson.databind -->
+      --add-opens com.fasterxml.jackson.databind/com.fasterxml.jackson.databind.node=org.assertj.core
+      <!-- nl.jqno.equalsverifier -->
+      --add-opens org.assertj.core/org.assertj.core.api.recursive.comparison=nl.jqno.equalsverifier
+      --add-opens org.assertj.core/org.assertj.core.groups=nl.jqno.equalsverifier
+      <!-- org.apache.commons.lang3 -->
+      --add-opens org.assertj.core/org.assertj.core.internal=org.apache.commons.lang3
     </argLine>
     <rootDirectory>${project.basedir}/../../../</rootDirectory>
     <spotless.skip>false</spotless.skip>
@@ -40,7 +48,7 @@
     <dependency>
       <groupId>nl.jqno.equalsverifier</groupId>
       <artifactId>equalsverifier</artifactId>
-      <version>3.18.1</version>
+      <version>3.19.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -74,7 +82,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.18.2</version>
+      <version>2.18.3</version>
       <scope>test</scope>
     </dependency>
     <dependency>
